<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchPostedActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_search_posted_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:onClick="openPostedActivity"
                android:text="@string/back_btn"
                android:textColor="#fff" />

            <Button
                android:id="@+id/search_search_posted_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:onClick="openListPostedActivity"
                android:text="@string/search_btn"
                android:textColor="#fff" />
        </LinearLayout>

        <EditText
            android:id="@+id/subject_search_posted_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/subject_et" />

        <ToggleButton
            android:id="@+id/testteza_search_posted_tgl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textOff="@string/testteza_off_tgl"
            android:textOn="@string/testteza_on_tgl"
            android:background="@color/colorPrimary"
            android:textColor="#fff"/>

        <EditText
            android:id="@+id/grade_search_posted_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/grade_et" />

        <EditText
            android:id="@+id/profile_search_posted_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/profile_et"/>

        <EditText
            android:id="@+id/chapter_search_posted_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/chapter_et" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>