<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/username_profile_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/username_tv"
        android:textSize="50dp"
        app:layout_constraintEnd_toStartOf="@+id/profile_imgv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_profile_btn" />

    <ImageView
        android:id="@+id/profile_imgv"
        android:layout_width="110dp"
        android:layout_height="108dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/design" />

    <Button
        android:id="@+id/settings_profile_btn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:onClick="openSettingsActivity"
        android:text="@string/settings_btn"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saved_profile_btn" />

    <Button
        android:id="@+id/posted_profile_btn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:onClick="openPostedActivity"
        android:text="@string/posted_btn"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_profile_btn" />

    <Button
        android:id="@+id/post_profile_btn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:onClick="openPostActivity"
        android:text="@string/post_btn"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tests_profile_btn" />

    <Button
        android:id="@+id/saved_profile_btn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:onClick="openSavedActivity"
        android:text="@string/saved_btn"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/posted_profile_btn" />

    <Button
        android:id="@+id/search_profile_btn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:onClick="openSearchActivity"
        android:text="@string/search_btn"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_imgv" />

    <Button
        android:id="@+id/tests_profile_btn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:onClick="openCalendarApp"
        android:text="@string/tests_btn"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_profile_btn" />

    <Button
        android:id="@+id/back_profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="openUserSignInActivity"
        android:text="@string/sign_out_btn"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        app:layout_constraintEnd_toStartOf="@+id/profile_imgv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>